[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-dual-hybrid"
version = "2.0.1"
description = "Production-grade RL framework with Mamba2, Dual-Tier Miras, FAISS LTM, and unified logging"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dawson Block"}
]
keywords = ["reinforcement-learning", "mamba", "memory", "ppo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
    "mypy",
]
faiss = [
    "faiss-cpu>=1.7.4",
]
mamba = [
    "mamba-ssm>=1.0.0",
]
tensorboard = [
    "tensorboard>=2.10.0",
]
all = [
    "faiss-cpu>=1.7.4",
    "tensorboard>=2.10.0",
]

[project.scripts]
infinity-train = "infinity_dual_hybrid.train:main"

[project.urls]
Homepage = "https://github.com/dawsonblock/INFINITY_DUAL_HYBRID"
Repository = "https://github.com/dawsonblock/INFINITY_DUAL_HYBRID"

[tool.setuptools.packages.find]
where = ["src"]
include = ["infinity_dual_hybrid*"]
exclude = ["tests*", "legacy*", "vendor*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "vendor"]
